<resources>
    <string name="app_name">FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="next">Next</string>
    <string name="second">Second</string>
    <string name="finish">Finish</string>
    <string name="third">Third</string>
    <string name="splash">Splash</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="f_you_don_t_have_account">İf you don\'t have account,</string>
    <string name="login1">Login</string>
    <string name="f_you_have_an_account">İf you have an account,</string>
    <string name="signup">SignUp</string>
    <string name="e_mail">Email</string>
    <string name="sign_up">SignUp</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="sign">Sign Up</string>
    <string name="f_you_don_t_have_account_sign_up">İf you don\'t have account, Sign Up</string>
    <string name="f_you_have_an_account_sign_in">İf you have an account Sign In</string>
    <string name="the_greatest_pleasure_i_know_is_to_do_a_good_action_by_stealth_and_to_have_it_found_out_by_accident">The greatest pleasure I know is to do a good action by stealth, and to have it found out by accident.</string>
    <string name="description">Description</string>
    <string name="mood">Mood</string>
    <string name="color">Color</string>
    <string name="lucky_number">Lucky Number</string>
    <string name="lucky_time">Lucky Time</string>
    <string name="compatibility">Compatibility</string>
    <string name="current_date">Current Date</string>
    <string name="date_range">Date Range</string>
    <string name="get">GET</string>
    <string name="horoscopes">Horoscopes</string>
    <string name="rising_sign">Rising Sign</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="get_your_daily">Get your daily</string>
    <string name="m_n_sign">MünüSign</string>
    <string name="you_can_learn_daily_mood">You can learn daily mood</string>
    <string name="find_out_your_daily_lucky_time">Find out your daily lucky time</string>
    <string name="find_your_daily_number">Find your daily number</string>
    <string name="find_out_your_daily_horoscope_match">Find out your daily horoscope match</string>
    <string name="find_your_daily_color">Find your daily color</string>
    <string name="get_your_daily_sign">Get your daily sign</string>
    <string name="are_you_ready_to_advanture_click_the_button_below">Are you ready to advanture click the button below</string>
    <string name="chose_your_sign">Chose Your Sign</string>
    <string name="daily">Daily</string>
</resources>