<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDD9D9"
    tools:context=".view.login.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/Email"
        app:boxCornerRadiusBottomEnd="@dimen/_6sdp"
        app:boxCornerRadiusBottomStart="@dimen/_6sdp"
        app:boxCornerRadiusTopEnd="@dimen/_6sdp"
        app:boxCornerRadiusTopStart="@dimen/_6sdp"
        app:boxStrokeColor="#D87979"
        app:boxStrokeWidth="0sp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="false"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:hintTextColor="#D87979"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:startIconDrawable="@drawable/mail_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailgiris"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_10sdp"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="@dimen/_6sdp"
        app:boxCornerRadiusBottomStart="@dimen/_6sdp"
        app:boxCornerRadiusTopEnd="@dimen/_6sdp"
        app:boxCornerRadiusTopStart="@dimen/_6sdp"
        app:boxStrokeColor="#D87979"
        app:boxStrokeWidth="0sp"
        app:endIconMode="password_toggle"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:hintTextColor="#D87979"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/pass_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailgirissifre"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textSize="@dimen/_10sdp"
            tools:ignore="TextContrastCheck,TextContrastCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:backgroundTint="#D87979"
        android:text="@string/login1"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <Button
        android:stateListAnimator="@null"
        android:id="@+id/buttons"
        android:shadowColor="#EDD9D9"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:backgroundTint="#EDD9D9"
        android:gravity="center"
        android:text="@string/f_you_don_t_have_account_sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/_9sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>