<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDD9D9"
    tools:context=".view.bottombar.HomeFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/m_n_sign"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_your_daily"
        android:textStyle="italic"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_130sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_9sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cardBackgroundColor="#8E63BC"
                app:layout_constraintTop_toBottomOf="@+id/textView7">


                <TextView
                    android:id="@+id/yourDecs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_your_daily_sign"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_200sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/eros"/>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_9sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardBackgroundColor="#E18EDF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" >

                <TextView
                    android:id="@+id/yourColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_your_daily_color"
                    android:layout_marginStart="@dimen/_150sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/love" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_9sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cardBackgroundColor="#213BDA"
                app:layout_constraintTop_toBottomOf="@+id/textView7" >

                <TextView
                    android:id="@+id/yourcompatibility"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/find_out_your_daily_horoscope_match"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_200sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/equals"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_9sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cardBackgroundColor="#368564"
                app:layout_constraintTop_toBottomOf="@+id/textView7" >

                <TextView
                    android:id="@+id/yourLuckyNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_your_daily_number"
                    android:layout_marginStart="@dimen/_150sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/number"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_9sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cardBackgroundColor="#ECAD2D"
                app:layout_constraintTop_toBottomOf="@+id/textView7" >

                <TextView
                    android:id="@+id/yourLuckyTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_out_your_daily_lucky_time"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_200sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/time"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_9sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardBackgroundColor="#DD4444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" >

                <TextView
                    android:id="@+id/yourMood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_can_learn_daily_mood"
                    android:layout_marginStart="@dimen/_150sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/mood"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>